--- a/style.css
+++ b/style.css
@@ -5,3 +5,40 @@ body {
   box-sizing: border-box;
   height: 100%;
 }
+
+.wrapper {
+  height: 80px; /* or use something like 10vh */
+  width: 100%;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+}
+
+.logo img {
+  width: 80px; 
+  height: auto;
+}
+
+.navbar ul {
+
+  display: flex;
+  gap: 60px;
+  margin: 0;
+  margin-right:70px;
+  padding: 0;
+}
+
+.navbar ul li {
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight:600;
+}
+
+.navbar ul li a {
+  color: white;
+  text-decoration: none;
+}
+
