--- a/style.css
+++ b/style.css
@@ -1,44 +1,148 @@
-html,
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  height: 100%;
 }
 
-.wrapper {
-  height: 80px; /* or use something like 10vh */
-  width: 100%;
-  background-color: black;
+body {
+  font-family: Arial, sans-serif;
+  color: white;
+  background-color: #000;
+}
+
+header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 20px;
+  align-items: center;
+  padding: 20px 60px;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 100;
 }
 
-.logo img {
-  width: 80px; 
-  height: auto;
+.logo {
+  font-size: 24px;
+  font-weight: bold;
 }
 
-.navbar ul {
+.bracket {
+  color: white;
+}
 
+.orange {
+  color: orange;
+}
+
+nav ul {
   display: flex;
-  gap: 60px;
-  margin: 0;
-  margin-right:70px;
-  padding: 0;
+  gap: 30px;
 }
 
-.navbar ul li {
+nav ul li {
   color: white;
-  font-size: 16px;
+  font-weight: bold;
   cursor: pointer;
-  font-weight:600;
 }
 
-.navbar ul li a {
+nav ul li.active {
+  color: orange;
+}
+
+.search-icon {
+  font-size: 18px;
+}
+
+.hero {
+  display: flex;
+  height: 90vh;
+}
+
+.hero-left {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 60px;
+  flex-direction: column;
+}
+
+.hero-left h1 {
+  font-size: 64px;
+  line-height: 1.2;
+}
+
+.hero-right {
+  flex: 1;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+
+.hero-right img {
+  width: 50%;
+  height: 100%;
+  object-fit: cover;
+  filter: grayscale(100%);
+}
+
+.image-overlay {
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: repeating-linear-gradient(
+    45deg,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 10px,
+    transparent 10px,
+    transparent 20px
+  );
+  pointer-events: none;
+}
+button {
   color: white;
-  text-decoration: none;
+  background-color: orange;
+  padding: 20px 50px;
+  border: 1px solid orangered;
+  align-items: self-start;
+  margin-right: 50px;
+  font-size: 20px;
 }
+footer {
+  display: flex;
+  flex-direction: row;
+  gap: 170px;
+  width: 100%;
+  height: 50%;
 
+  margin-top: 30px;
+  margin-left: 50px;
+  border-top: 1px solid gray;
+}
+.lastpart a {
+  display: flex;
+  flex-direction: column;
+  display: block;
+  color: gray;
+  text-decoration: none;
+  margin-top: 20px;
+}
+.thirdpart a {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+  text-decoration: none;
+  color: gray;
+  display: block;
+}
+.lastsection p {
+  color: gray;
+  font-size: 18px;
+  margin-top: 15px;
+}
