--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 }
 
 .logo {
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
 }
 
@@ -54,6 +54,30 @@ nav ul li.active {
   font-size: 18px;
 }
 
+.secondsection {
+  height: 50%;
+  width: 50%;
+  font-size: 15px;
+  background-color: #000;
+  padding-top: 19px;
+  padding-bottom: 120px;
+  display: flex;
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.secondsectionpartone {
+  width: 50%;
+  height: 50%;
+
+  font-size: 15px;
+  color: #5d5d5d;
+  padding: 0px 15px;
+}
+.secondsectionparttwo img {
+  height: 50%;
+  width: 50%;
+  border-radius: 50%px;
+}
 .hero {
   display: flex;
   height: 90vh;
@@ -69,8 +93,13 @@ nav ul li.active {
 }
 
 .hero-left h1 {
+  background-image: url(images/slider-1-bg-1.png);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
   font-size: 64px;
   line-height: 1.2;
+  margin-top: 20px;
 }
 
 .hero-right {
@@ -83,8 +112,8 @@ nav ul li.active {
 
 .hero-right img {
   width: 50%;
-  height: 100%;
-  object-fit: cover;
+  height: 90%;
+  object-fit: fit;
   filter: grayscale(100%);
 }
 
@@ -113,7 +142,7 @@ button {
   align-items: self-start;
   margin-right: 50px;
   font-size: 20px;
-  margin-top:20px;
+  margin-top: 20px;
 }
 footer {
   display: flex;
@@ -122,9 +151,8 @@ footer {
   width: 100%;
   height: 50%;
 
-  margin-top: 30px;
-  margin-left: 50px;
   border-top: 1px solid gray;
+  background-color: #101010;
 }
 .lastpart a {
   display: flex;
@@ -146,4 +174,57 @@ footer {
   color: gray;
   font-size: 18px;
   margin-top: 15px;
+  margin-left: 50px;
+}
+.lastsection h1 {
+  margin-left: 50px;
+}
+.footerup {
+  width: 100%;
+  height: auto; /* better than fixed 30% */
+  color: #5d5d5d;
+  font-size: 15px;
+  font-family: "Courier New", Courier, monospace;
+  padding: 60px 0 105px;
+  background-color: #101010;
+  display: flex;
+  justify-content: center;
+}
+
+.footerupcontent {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: 500px;
+}
+
+.logo img {
+  max-width: 150px;
+}
+.social-links {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-links a {
+  color: white;
+  margin: 0 5px;
+  font-size: 24px;
+  text-decoration: none;
+  transition: color 0.3s;
+  border: 1px solid black;
+  border-radius: 50%;
+  background-color: black;
+  padding: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social-links a:hover {
+  color: #ffffff;
+  display: flex;
 }
