--- a/style.css
+++ b/style.css
@@ -94,7 +94,54 @@ body {
   background-repeat: no-repeat;
   z-index: 5;
 }
+.video-button {
+  position: absolute;
+  right: 150px;
+  bottom: 30px;
+  width: 150px;
+  height: 150px;
+  background: orange;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 7;
+}
 
+.center-circle {
+  width: 70px;
+  height: 70px;
+  background: white;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+}
+
+.play-icon {
+  font-size: 20px;
+  color: black;
+  margin-left: 3px;
+}
+
+.circle-text {
+  position: absolute;
+  width: 150px;
+  height: 150px;
+}
+
+.text-circle {
+  width: 100%;
+  height: 100%;
+}
+
+text {
+  font-size: 6px;
+  fill: white;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
 .lastthird {
   width: 100%;
   padding: 20px 0px 0px;
