--- a/style.css
+++ b/style.css
@@ -69,8 +69,12 @@ body {
   padding: 10px 0px;
 }
 .brandsdisplay {
-  width: 70%;
   display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 .awardwinning {
   width: 100%;
